<resources>
    <string name="app_name">Laboratorio</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="Logout">Logout</string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Accept">Accept</string>
    <string name="Cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="NewForm">New Form</string>
    <string name="Date">Date</string>
    <string name="Name">Name</string>
    <string name="Category">Category</string>
    <string name="Commentary">Commentary</string>
    <string name="Summary">Summary</string>
    <string name="ListForms">Forms List</string>
    <string name="NewQuestion">New Question</string>
    <string name="QuestionList">Question List</string>
    <string name="title_activity_maps">Map</string>

</resources>
